# agentpm

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  demo.tape  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug.yaml  feature-request.yaml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-04-01-v2.1-features.md
docs/superpowers/plans/: 2026-03-31-agendum-v2-rewrite.md
docs/superpowers/specs/: 2026-03-31-agendum-v2-design.md
src/agendum/: cli.py  complexity.py  config.py  env_context.py  models.py  onboarding.py  server.py  task_graph.py  tools.py
src/agendum/enrichment/: __init__.py  pipeline.py  sources.py
src/agendum/store/: __init__.py  agent_store.py  board_format.py  board_store.py  learnings_store.py  locking.py  memory_store.py  plan_store.py  project_store.py  task_format.py  task_store.py  trace_store.py
src/agendum/tools/: __init__.py  agent.py  board.py  memory.py  project.py  task.py  task_workflow.py  utils.py  v2.py
src/agendum/tools/orchestrator/: __init__.py  _helpers.py  dispatch.py  enrichment.py  planning.py  policy.py  review.py  sources.py
src/agentpm/: cli.py  config.py  deps.py  env_context.py  models.py  server.py  task_graph.py
src/agentpm/store/: agent_store.py  memory_store.py  project_store.py  task_store.py
src/agentpm/tools/: agent.py  task.py
templates/: AGENTS.md  CLAUDE.md  agendum_rules_snippet.md
tests/: conftest.py  test_adaptive_budget.py  test_board_format.py  test_board_store.py  test_complexity.py  test_concurrent.py  test_context_enrichment.py  test_deps.py  test_enrichment_core.py  test_enrichment_sources.py  test_enrichment_v2.py  test_learnings_store.py  test_load.py  test_mcp_agent.py  test_mcp_board.py  test_mcp_memory.py  test_mcp_project.py  test_mcp_task.py  test_mcp_task_workflow.py  test_mcp_utils.py  test_memory_store.py  test_model_routing.py  test_models_v2.py  test_onboarding.py  test_orch_approve.py  test_orch_dispatch.py  test_orch_flow.py  test_orch_plan.py  test_orch_review.py  test_project_learnings.py  test_project_store.py  test_security.py  test_task_store.py  test_tools_v2.py  test_trace_store.py  test_zero_config.py
