[project]
name = "agentpm"
version = "0.1.0"
description = "Universal project management for AI coding agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.scripts]
agentpm = "agentpm.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
